Bug 455315 - when removing a bookmark we recalculate frecency with wrong isBookmark, r=dietrich