toolkit/components/places/tests/unit/head_bookmarks.js
@@ -154,6 +154,39 @@ function dump_table(aName)
   stmt = null;
 }
 
+/*
+ * Removes all bookmarks and checks for correct cleanup
+ */
+function remove_all_bookmarks() {
+  var bs = Cc["@mozilla.org/browser/nav-bookmarks-service;1"].
+           getService(Ci.nsINavBookmarksService);
+  // Clear all bookmarks
+  bs.removeFolderChildren(bs.bookmarksMenuFolder);
+  bs.removeFolderChildren(bs.toolbarFolder);
+  bs.removeFolderChildren(bs.unfiledBookmarksFolder);
+  // Check for correct cleanup
+  check_no_bookmarks()
+}
+
+/*
+ * Checks that we don't have any bookmark
+ */
+function check_no_bookmarks() {
+  var hs = Cc["@mozilla.org/browser/nav-history-service;1"].
+           getService(Ci.nsINavHistoryService);
+  var bs = Cc["@mozilla.org/browser/nav-bookmarks-service;1"].
+           getService(Ci.nsINavBookmarksService);
+  var query = hs.getNewQuery();
+  query.setFolders([bs.toolbarFolder, bs.bookmarksMenuFolder, bs.unfiledBookmarksFolder], 3);
+  var options = hs.getNewQueryOptions();
+  options.queryType = Ci.nsINavHistoryQueryOptions.QUERY_TYPE_BOOKMARKS;
+  var result = hs.executeQuery(query, options);
+  var root = result.root;
+  root.containerOpen = true;
+  do_check_eq(root.childCount, 0);
+  root.containerOpen = false;
+}
+
 var syncSvc = null;
 function start_sync() {
 // profile-after-change doesn't create components in xpcshell, so we have to do
